Fixing rtm++ bug 52998. Form controls inside <noscript> were incorrectly added to the form even if javascript was enabled. sr=vidur, r=pollmann